# simple_agentic_workflow

./: .gitignore  HISTORY.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
docker/: docker-compose.yaml  python.Dockerfile  pytorch.Dockerfile
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  package.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  package.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  package.rst.txt
notebooks/: README.md  adaptive_llm.ipynb  agent_workflow.ipynb  custom_researcher.ipynb  custom_reviewer.ipynb  multi_lllm.ipynb  multi_llm.ipynb  symphonic_llm.ipynb
saw/: main.py  workflow.py
saw/core/: backend.py  model_interface.py  processor.py
saw/providers/: google.py  groq.py  ollama.py  openai.py
saw/tests/utils/: test_cli.py  test_utils.py
saw/utils/: cli.py  exceptions.py  pkg_globals.py  utils.py
saw/workflows/: utils.py
saw/workflows/adaptive_llm/: README.md  adaptive.py  templates.py
saw/workflows/multi_llm/: README.md  chaining.py  parallelization.py  routing.py  templates.py
saw/workflows/symphonic_llm/: README.md  symphonic.py  templates.py
scripts/: create_usr_vars.sh
